src/sass/main.scss
@import 'utils/variables';
@import 'utils/typography';
@import 'utils/grid';
@import 'utils/reset';

header {
  background: {
    image: url('../img/header-bg.svg');
    repeat: no-repeat;
    size: 100% 100%;
  }
}

.nav {
  display: flex;
  align-items: center;
  padding-top: 50px;
  margin-bottom: 140px;
  position: relative;
  @include media('<sm') {
    margin-bottom: 100px;
  }
  &-logo {
    display: flex;
    align-items: center;
    & img {
      height: 50px;
      margin-right: 10px;
    }
    &__text {
      color: $light;
      font: {
        size: 1.4rem;
        weight: 700;
      }
    }
  }
  &-menu {
    @include media('>md') {
      margin-left: auto;
    }
    @include media('<=md') {
      width: 50vw;
      height: 100vh;
      position: fixed;
      top: 0;
      right: -50%;
      background: #0ecff0;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      transition: right .5s;
    }
    @include media('<sm') {
      width: 100vw;
      right: -100%;
    }
    &_expanded {
      right: 0;
    }
    &__toggler {
      margin: {
        top: 20px;
        right: 20px;
        bottom: 40px;
      }
      color: $light;
      font-size: 3rem;
      @include media('>md') {
        display: none;
      }
    }
    & ul {
      display: flex;
      @include media('<=md') {
        flex-direction: column;
        align-items: center;
        align-self: stretch;
      }
    }
    &__item {
      @include media('>md') {
        margin-right: 60px;
        &:last-child {
          margin-right: 0;
        }
      }
      @include media('<=md') {
        margin-right: 0;
        padding: 10px 0;
      }
    }
    &__link {
      opacity: 0.7;
      text-transform: uppercase;
      color: $light;
      font: {
        size: 1.6rem;
        weight: 600;
      }
      transition: opacity .25s;
      &:hover {
        opacity: 1;
      }
    }
  }
  &-toggler {
    display: none;
    color: $light;
    font-size: 3rem;
    @include media('<=md') {
      display: block;
      margin-left: auto;
    }
  }
}

.intro {
  &-row {
    @include make-row();
    grid-gap: 70px $grid-gutter;
  }
  &-content {
    grid-column: 4/span 6;
    display: flex;
    flex-direction: column;
    align-items: center;
    color: $light;
    @include media('<lg') {
      grid-column: span 12;
    }
  }
  &__title {
    margin-bottom: 15px;
    text-align: center;
    font: {
      size: 4.5rem;
      weight: 700;
    }
    @include media('<sm') {
      font-size: 3.8rem;
    }
  }
  &__subtitle {
    margin-bottom: 50px;
    font-size: 1.6rem;
    text-align: center;
  }
  &-btn-group {
    display: flex;
    align-items: center;
    @include media('<sm') {
      flex-direction: column;
    }
    &__btn {
      padding: 15px 30px;
      color: $light;
      background-color: transparent;
      border: 2px solid $light;
      border-radius: 10px;
      font: {
        size: 1.8rem;
        weight: 600;
      }
      transition: .25s;
      &:hover {
        background-color: $light;
        color: $dark;
      }
      @include media('>=sm') {
        margin-right: 30px;
        &:last-child {
          margin-right: 0;
        }
      }
      @include media('<sm') {
        margin-bottom: 20px;
        &:last-child {
          margin-bottom: 0;
        }
      }
    }
  }
  &-mockup {
    grid-column: 5/ span 4;
    & img {
      display: block;
      margin: 0 auto;
      @include media('<lg') {
        width: 100%;
      }
    }
  }
}

body {
  background-color: $accent--light-grey;
}

.features {
  padding: {
    top: 150px;
    bottom: 175px;
  }
  @include media('<lg', '>sm') {
    padding: {
      top: 100px;
      bottom: 100px;
    }
  }
  &-row {
    @include make-row();
    @include media('<lg', '>sm') {
      position: relative;
      left: $grid-gutter / 2;
    }
  }
  &-mockup {
    grid-area: 1/2/span 2/span 3;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    @include media('<lg') {
      display: none;
    }
    & img {
      display: block;
    }
  }
}

.feature {
  padding: 60px 30px 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.1);
  position: relative;
  @include media('>sm') {
    &_moved-x {
      right: $grid-gutter;
    }
    &_moved-y {
      top: $grid-gutter*2;
    }
  }
  @include media('>lg') {
    &:nth-child(even) {
      grid-column: 7/span 3;
    }
    &:nth-child(odd) {
      grid-column: span 3;
    }
  }
  @include media('<lg', '>sm')  {
    grid-column: span 6;
  }
  @include media('<sm') {
    grid-column: span 12;
  }
  &__icon {
    width: 50px;
    height: 50px;
    margin-bottom: 35px;
  }
  &__title {
    margin-bottom: 25px;
    font: {
      size: 1.4rem;
      weight: 600;
    }
  }
  &__subtitle {
    text-align: center;
    color: $accent--dark-blue;
    line-height: 170%;
    font: {
      size: 1.4rem;
      weight: 400;
    }
  }
}

